@@ -1,1 +1,0 @@
-DIST ptyprocess-0.5.tar.gz 14923 SHA256 dcb78fb2197b49ca1b7b2f37b047bc89c0da7a90f90bd5bc17c3ce388bb6ef59 SHA512 6619bfc1dfc7c980ffc72dba62697692eb749f19500616e8783cfdc3c35980276eb39070f4cd7932775abb5e798c921b9320c5f51b9052f526585f01cd56259e WHIRLPOOL b1bd0da485ea106a3d366ab21dc714418b8d392a32fc3386ef734362da8ee455a38f9330cedfe35687be09bea3ff622c54440119fca72d7787d9a29518717b77
