@@ -3,22 +3,23 @@
 # $Header: $
 
 EAPI=5
-PYTHON_COMPAT=( python{2_7,3_3,3_4} )
 
-inherit distutils-r1
+PYTHON_COMPAT=( python2_7 python3_{3,4} )
 
-MY_PN="pyFFTW"
+inherit distutils-r1 git-r3
 
-DESCRIPTION="Launch a subprocess in a pseudo terminal (pty), and interact with both the process and its pty"
+DESCRIPTION="Run a subprocess in a pseudo terminal"
 HOMEPAGE="https://github.com/pexpect/ptyprocess"
-
-if [ ${PV} == "9999" ] ; then
-	inherit git-r3
-	EGIT_REPO_URI="https://github.com/pexpect/${PN}.git git://github.com/pexpect/${MY_PN}.git"
-else
-	SRC_URI="mirror://pypi/${PN:0:1}/${PN}/${P}.tar.gz"
-	KEYWORDS="~amd64"
-fi
+SRC_URI=""
+EGIT_REPO_URI="https://github.com/pexpect/${PN}.git git://github.com/pexpect/${MY_PN}.git"
 
 LICENSE="ISC"
 SLOT="0"
+KEYWORDS=""
+IUSE="test"
+
+DEPEND="test? ( dev-python/pytest[${PYTHON_USEDEP}] )"
+
+python_test() {
+	py.test --verbose --verbose || die
+}
