@@ -2,6 +2,11 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  30 May 2015; Justin Lecher <jlec@gentoo.org> -Manifest,
+  -ptyprocess-0.5.ebuild, ptyprocess-9999.ebuild:
+  dev-python/ptyprocess: Add missing test funcion and drop ebuild which was
+  moved to tree
+
 *ptyprocess-0.5 (29 May 2015)
 *ptyprocess-9999 (29 May 2015)
 
